[tool.poetry]
name = "k8test"
version = "0.1.0"
description = "Installs a Kubernetes cluster at cloudscale.ch for integration tests."
authors = ["Denis Krienbuhl"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.2.0"
pydantic = "^2.1.1"
requests = "^2.31.0"
typer = "^0.9.0"
semver = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
